# dicorina

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/hooks/: block-branch-switch.sh  pr-monitor.sh  pr-watch.sh  require-worktree-agent.sh  require-worktree.sh  worktree-stop.sh
.github/workflows/: ci.yml
deploy/: config.example.toml  dicorina.service  install.sh  requirements.txt
src/dicorina/: __init__.py  __main__.py  app.py  asgi.py  config.py  deps.py  errors.py  eviction.py  healthcheck.py
src/dicorina/dimse_face/: __init__.py  allowlist.py  face.py  results.py
src/dicorina/http_face/: app-config.js  ohif.py  params.py  qido.py  qido_cache.py  service.py  streaming.py  wado.py
staging/: bench_convert.py
staging/vm-net/: README.md  bench.sh  bench_plan.py  bench_report.py  build-golden.sh  gen_studies.py  net.env  run.sh  study_plan.py  test_vm_net.py  vm_common.sh  vmnet_assert.py
staging/vm-net/config/: pacs-bench.json  pacs.json  proxy.toml
staging/vm-net/roles/: bench_agent.py  client_agent.py  proxy_bench_watch.sh  proxy_install.sh  proxy_provision.sh
tests/: conftest.py  factories.py  fake_pacs.py  test_vmnet_agent_core.py  test_vmnet_assert.py  test_vmnet_bench_plan.py  test_vmnet_bench_report.py  test_vmnet_config.py  test_vmnet_study_plan.py
tests/integration/: test_app_lifecycle.py  test_dimse_find.py  test_dimse_move.py  test_dimse_store.py  test_entrypoint.py  test_eviction.py  test_healthcheck.py  test_pool_multiport.py  test_qido.py  test_wado.py
tests/unit/: test_allowlist.py  test_auth.py  test_config.py  test_dimse_face.py  test_dimse_store.py  test_errors.py  test_ohif.py  test_params.py  test_qido_cache.py  test_results.py  test_service.py  test_smoke.py
