[project]
name = "dicorina"
version = "0.2.1"
description = "Pure-Python DICOM + DICOMweb pass-through proxy for a C-MOVE-only PACS."
requires-python = ">=3.12"
authors = [{ name = "Denis Nesterov" }]
dependencies = [
    "dimsechord>=0.6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydicom>=2.3.1",
    "pynetdicom>=3.0.4",
    "pydantic>=2.12.0",
    "cachetools>=7.0.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
dicorina = "dicorina.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.1.0",
    "pytest-timeout>=2.4.0",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dicorina"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "DTZ", "Q", "RUF", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydicom.*", "pynetdicom.*", "cachetools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
timeout = 90
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["staging/vm-net"]
filterwarnings = [
    "ignore:.*is_little_endian.*:DeprecationWarning:pydicom",
    "ignore:.*is_implicit_VR.*:DeprecationWarning:pydicom",
    "ignore:.*Invalid value for VR UI.*:UserWarning:pydicom",
    "ignore:.*Unknown encoding.*:UserWarning:pydicom",
    "ignore::ResourceWarning:pynetdicom",
]
